Textarea instead of input and Readme file

--- a/AngularLoginJwt/src/app/logon/logon.component.html
+++ b/AngularLoginJwt/src/app/logon/logon.component.html
@@ -14,8 +14,8 @@
 
 <br/>
 <br/>
-Received token:
-<input style="width: 80%" type="text" value="{{ authenticationToken?.token }}"/>
+Received token:<br/>
+<textarea name="tokenTextarea" cols="40" rows="5" style="width: 95%" 
+        value="{{ authenticationToken?.token }}"></textarea>
 
-<br/>
 </div>
